[metadata]
name = py-option-pricing
version = 0.1.0
description = Biblioteca para pricing de opciones (Black-Scholes, Heston, FFT, MC)
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
url = https://github.com/youruser/py-option-pricing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21
    scipy>=1.8

[options.packages.find]
where = src