[metadata]
name = OptionPricingPY
version = 0.7.0
description = Lightweight, extensible framework for pricing options with swappable products, models, and engines. Designed for experimentation (analytical, FFT, binomial, Monte Carlo) with a simple orchestration context, caching, and optional parallelism.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ramon Gonzalez
license = MIT
url = https://github.com/ramongonzalezgv/OptionPricingPY
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21
    scipy>=1.8

[options.packages.find]
where = src